djvusmooth (0.2.13) UNRELEASED; urgency=low

  * Add keyboard shortcuts for “Zoom in” and “Zoom out”.
    https://bitbucket.org/jwilk/djvusmooth/issue/8
  * Fix editing text in external editor: when a zone broader than line without
    sub-zones existed, djvusmooth incorrectly skipped it when importing text.
    Thanks to Janusz S. Bień for the bug report.

 -- Jakub Wilk <jwilk@jwilk.net>  Mon, 01 Oct 2012 21:21:06 +0200

djvusmooth (0.2.12) unstable; urgency=low

  * Install desktop file.
  * Update the Russian translation, thanks to Kyrill Detinov.
  * Add Spanish translation, contributed by C. Daniel Sanchez R.
  * Rename menu item “Edit → Outline → Remove” to “… → Remove all”.
    Thanks to Maxim Leyenson for the bug report.
  * Use our own minimal XDG Base Directory implementation instead of PyXDG.

 -- Jakub Wilk <jwilk@jwilk.net>  Wed, 13 Jun 2012 20:53:49 +0200

djvusmooth (0.2.11) unstable; urgency=low

  * Let the setup.py script build and install binary message catalogs.
  * Don't throw exceptions when using “Fit width”, “Fit height” and “Stretch”
    zoom factors and no page is shown. Thanks to Sherwin Singer for the bug
    report.
  * Fix a typo in the manual page.

 -- Jakub Wilk <jwilk@jwilk.net>  Sun, 11 Dec 2011 22:57:54 +0100

djvusmooth (0.2.10) unstable; urgency=low

  * Let the setup.py script build and install manual pages. Thanks to Kyrill
    Detinov and Markus Baertschi for bug reports.
  * Fix the code that was supposed to disable the GUI while an external editor
    is running. Thanks to Mike Thiery for the bug report.
  * Fix the manual page: djvusmooth uses XDG_CONFIG_HOME rather than
    XDG_DATA_HOME.

 -- Jakub Wilk <jwilk@jwilk.net>  Fri, 18 Feb 2011 12:13:43 +0100

djvusmooth (0.2.9) unstable; urgency=low

  * Improve support for non-POSIX systems:
    + Windows: guess location of DjVuLibre DLLs and tools (requires
      python-djvulibre ≥ 0.3.3).
    + Windows: use the “Application Data” folder to store configuration files